--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+  -webkit-tap-highlight-color: transparent;
+}
+
 html,
 body {
   padding: 0;
@@ -18,4 +22,5 @@ a {
 
 * {
   box-sizing: border-box;
+  
 }
